--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,17 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-github-login": "^1.0.3",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-login": "^5.1.21",
+    "react-google-places-autocomplete": "^3.0.0-alpha.1",
+    "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-social-login-buttons": "^3.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
