--- a/package.json
+++ b/package.json
@@ -20,21 +20,16 @@
     "express": "^4.17.1",
     "express-validate": "0.0.8",
     "express-validator": "^6.4.0",
+    "google-auth-library": "^6.0.6",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
     "normalize-url": "^5.1.0",
     "path": "^0.12.7",
-    "rc-rate": "^2.8.2",
-    "react-google-places-autocomplete": "^2.3.2",
-    "react-icons": "^3.11.0",
-    "react-rater": "^5.1.1",
-    "react-rating": "^2.0.5",
-    "react-rating-stars-component": "^2.2.0",
-    "react-star-rating-component": "^1.4.1",
-    "react-star-ratings": "^2.3.0",
-    "request": "^2.88.2"
+    "react-google-places-autocomplete": "^3.0.0-alpha.1",
+    "request": "^2.88.2",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
