--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "const": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validate": "0.0.8",
     "express-validator": "^6.4.0",
