--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "simple-react-validator": "^1.5.0",
     "uuid": "^7.0.3"
   },
   "scripts": {
@@ -48,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
